# DistributedPasswordCracker

./: .gitignore  CMakeLists.txt  README.md
Cracker/: CMakeLists.txt
Cracker/includes/: crypt_data.h  threaded_crpyt.h
Cracker/src/: cracker.cpp  crypt_data.cpp  threaded_crpyt.c
